Added tests test_cli.py, test_log.py, test_error.py, and test_utils.py.

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,8 +20,9 @@ universal = 1
 testpaths = tests
 log_file = tests/pytest.log
 log_file_level = DEBUG
+log_file_mode = a
 log_cli = 1
-log_cli_level = CRITICAL
+log_cli_level = DEBUG
 cache_dir = tests/.pytest_cache
 cache_clear = 1
 
