Added tox.ini and .travis.yaml.

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,8 @@ cache_dir = tests/.pytest_cache
 cache_clear = 1
 
 [pycodestyle]
-# References: https://pycodestyle.readthedocs.io/
+# References:
+#   https://pycodestyle.readthedocs.io/
 max-doc-length = 75
 max-line-length = 79
 filename = *.py
