Added tox.ini and .travis.yaml.

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,30 +16,26 @@ description-file = README.rst
 [wheel]
 universal = 1
 
-[tool:pytest]
-testpaths = tests
-log_file = tests/pytest.log
-log_file_level = DEBUG
-log_file_mode = a
-log_cli = 1
-log_cli_level = DEBUG
-cache_dir = tests/.pytest_cache
-cache_clear = 1
-
 [pycodestyle]
-# References:
-#   https://pycodestyle.readthedocs.io/
 max-doc-length = 75
 max-line-length = 79
 filename = *.py
 exclude = docs/*,setup.py
 count = True
 format = pylint
-# E111 indent
-# E402 module level import not at top of file
-# F401 'builtins.*' imported but unused
-# F403 'from builtins import *' used; unable to detect undefined names
-# F405 'unicode' may be undefined, or defined from star
-# F405 imports: builtins
-# W503 line break before binary operator
+# References:
+#   https://pycodestyle.readthedocs.io/
+# Ignored Error Codes:
+#   E111 - indentation
+#   E402 - module level import not at top of file
+#   F401 - builtins.* imported but unused
+#   F403 - from builtins import * used; unable to detect undefined names
+#   F405 - unicode may be undefined, or defined from star
+#   F405 - imports: builtins
+#   W503 - line break before binary operator
 ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
+
+[check-manifest]
+# include in setup.cfg or tox.ini
+ignore =
+  .travis.yml
