--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,24 @@
 [tox]
 envlist =
-    py27
-    py34
-    py35
-    py36
-    py37
+  py27
+  py37
+  docs
 
 [testenv]
 deps =
-    six
-    pytest
-    pytest-cov
-    coverage
-    requests
+  six
+  pytest
+  pytest-cov
+  coverage
+  requests
 commands =
-    pytest --cov=skeleton
+  pytest --cov=skeleton
 setenv =
-    PYTHONPATH={toxinidir}
+  PYTHONPATH={toxinidir}
+
+[testenv:docs]
+# TEST BUILDING DOCS
+basepython = python3.7
+deps = skeleton[docs]
+commands =
+  python setup.py docs
