--- a/.travis.yaml
+++ b/.travis.yaml
@@ -2,11 +2,10 @@ dist: xenial
 language: python
 python:
   - "2.7"
-  - "3.4"
-  - "3.5"
-  - "3.6"
   - "3.7"
 install:
-  - pip install tox tox-travis
+  - python scripts/install.py
 script:
-  - tox
+  - python scripts/test.py
+after_success:
+  - pycodestyle
