--- a/setup.cfg
+++ b/setup.cfg
@@ -1,31 +1,34 @@
+[aliases]
+release = sdist bdist_wheel
+docs = build_sphinx
+
 [build_sphinx]
 build-dir = docs/build
 source-dir = docs/source
 
+[bdist_wheel]
+universal = 1
+
+[check-manifest]
+ignore = .travis.yml
+
 [clean]
 all = 1
-
-[aliases]
-release = sdist bdist_wheel
-docs = build_sphinx
 
 [metadata]
 license-file = LICENSE
 description-file = README.rst
 
-[wheel]
-universal = 1
-
 [pycodestyle]
+# References:
+#   https://pycodestyle.readthedocs.io/
 max-doc-length = 75
 max-line-length = 79
 filename = *.py
-exclude = docs/*,setup.py
-count = True
+exclude = @*,.venv*,.git,docs/*,setup.py
+count = 1
 format = pylint
-# References:
-#   https://pycodestyle.readthedocs.io/
-# Ignored Error Codes:
+# Error Codes Ignored:
 #   E111 - indentation
 #   E402 - module level import not at top of file
 #   F401 - builtins.* imported but unused
@@ -34,8 +37,3 @@ format = pylint
 #   F405 - imports: builtins
 #   W503 - line break before binary operator
 ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
-
-[check-manifest]
-# include in setup.cfg or tox.ini
-ignore =
-  .travis.yml
