--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,20 @@
 [tox]
-envlist =
-  py27
-  py37
-  docs
+envlist = docs,py27,py37,pycodestyle
 
 [testenv]
-deps =
-  six
-  pytest
-  pytest-cov
-  coverage
-  requests
-commands =
-  pytest --cov=skeleton
-setenv =
-  PYTHONPATH={toxinidir}
+commands = pytest --cov=skeleton --html=tests/report-{envname}.html --self-contained-html
+extras = tests
+ignore_errors = true
+setenv = PYTHONPATH = {toxinidir}
+skip_missing_interpreters = true
 
 [testenv:docs]
 basepython = python3.7
-deps = skeleton[docs]
-commands =
-  python setup.py docs
+extras = docs
+commands = python setup.py docs
+
+[testenv:pycodestyle]
+basepython = python3.7
+extras = docs
+deps = pycodestyle
+commands = pycodestyle *.py
