--- a/pytest.ini
+++ b/pytest.ini
@@ -1,12 +1,12 @@
 [pytest]
 testpaths = tests
 log_file = tests/pytest.log
-# log_file_mode = a
 log_file_level = DEBUG
-log_file_format = %(asctime)s %(levelname)s pid=%(process)d tid=%(threadName)s file=%(filename)s:%(funcName)s:%(lineno)d | %(message)s
+log_file_format = %(asctime)s %(levelname)s %(filename)s:%(funcName)s:%(lineno)d | %(message)s
 log_file_date_format = %Y-%m-%d %H:%M:%S
 log_cli = 1
 log_cli_level = CRITICAL
 log_cli_format = %(message)s
 cache_dir = tests/.pytest_cache
 cache_clear = 1
+render_collapsed = True
