--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,16 @@ docs = build_sphinx
 build-dir = docs/build
 source-dir = docs/source
 
+[bdist_rpm]
+doc_files =
+  docs
+  LICENSE.txt
+  README.rst
+  CHANGELOG.rst
+install-script = scripts/rpm_install.sh
+release = 1
+packager = Chad Loether <chad.loether@outlook.com>
+
 [bdist_wheel]
 universal = 1
 
@@ -16,18 +26,17 @@ ignore = .travis.yml
 all = 1
 
 [metadata]
-license-file = LICENSE
+license-file = LICENSE.txt
 description-file = README.rst
 
 [pycodestyle]
-# References:
-#   https://pycodestyle.readthedocs.io/
 max-doc-length = 75
 max-line-length = 79
 filename = *.py
 exclude = @*,.venv*,.git,docs/*,setup.py
 count = 1
 format = pylint
+ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
 # Error Codes Ignored:
 #   E111 - indentation
 #   E402 - module level import not at top of file
@@ -36,4 +45,5 @@ format = pylint
 #   F405 - unicode may be undefined, or defined from star
 #   F405 - imports: builtins
 #   W503 - line break before binary operator
-ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
+# References:
+#   https://pycodestyle.readthedocs.io/
