--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,56 @@
 [tox]
-envlist = docs,py27,py37,pycodestyle
+envlist =
+  coverage-clean
+  {py27,py37}
+  docs
+  manifest
+  readme
+  coverage-report
 
 [testenv]
-commands = pytest --cov=skeleton --html=tests/report-{envname}.html --self-contained-html
-extras = tests
 ignore_errors = true
-setenv = PYTHONPATH = {toxinidir}
 skip_missing_interpreters = true
+setenv =
+  PYTHONPATH={toxinidir}
+  ENVNAME={envname}
+  LC_CTYPE = en_US.UTF-8
+# This is required in order to get UTF-8 output inside of the sub-processes
+# that our tests use.
+commands =
+  pip install skeleton[tests]
+  {toxinidir}/scripts/test.py {posargs}
+  coverage run --parallel -m pytest {posargs}
+  pycodestyle skeleton
 
 [testenv:docs]
 basepython = python3.7
 extras = docs
-commands = python setup.py docs
+commands =
+  pip install skeleton[docs]
+  python setup.py docs
 
-[testenv:pycodestyle]
+[testenv:manifest]
+deps = check-manifest
+commands = check-manifest
+
+[testenv:readme]
+deps =
+  readme_renderer
+  twine
+skip_install = true
+commands =
+  python setup.py check -r -s
+  twine check dist/*
+
+[testenv:coverage-clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
+
+[testenv:coverage-report]
 basepython = python3.7
-extras = docs
-deps = pycodestyle
-commands = pycodestyle *.py
+deps = coverage
+skip_install = true
+commands =
+  coverage combine
+  coverage report {toxinidir}/skeleton/*.py
