--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,7 @@
 testpaths = tests
 log_file = tests/pytest.log
 log_file_level = DEBUG
-log_file_format = %(asctime)s %(levelname)s %(filename)s:%(funcName)s:%(lineno)d | %(message)s
+log_file_format = %(asctime)s [%(name)s] %(levelname)s: %(message)s
 log_file_date_format = %Y-%m-%d %H:%M:%S
 log_cli = 1
 log_cli_level = CRITICAL
