--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,24 @@ ignore = .travis.yml
 [clean]
 all = 1
 
+[coverage:html]
+directory = tests/coverage_html
+
+[coverage:run]
+branch = True
+source = skeleton
+omit = */tests/*
+
+[coverage:report]
+ignore_errors = True
+omit =
+  */tests/*
+  .tox/*
+exclude_lines =
+  raise NotImplementedError.*
+  pragma: NO COVER
+  def __repr__
+
 [metadata]
 license-file = LICENSE.txt
 description-file = README.rst
@@ -33,7 +51,7 @@ description-file = README.rst
 max-doc-length = 75
 max-line-length = 79
 filename = *.py
-exclude = @*,.venv*,.git,docs/*,setup.py
+exclude = __pycache__,dist*,build*,*.egg-info,.idea*,.git,.tox*,*.pytest_cache*,setup.py
 count = 1
 format = pylint
 ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
