--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ setenv =
 # This is required in order to get UTF-8 output inside of the sub-processes
 # that our tests use.
 commands =
-  pip install skeleton[tests]
+  {toxinidir}/scripts/install.py {posargs}
   {toxinidir}/scripts/test.py {posargs}
   coverage run --parallel -m pytest {posargs}
   pycodestyle skeleton
@@ -26,7 +26,7 @@ commands =
 basepython = python3.7
 extras = docs
 commands =
-  pip install skeleton[docs]
+  pip install ".[docs]"
   python setup.py docs
 
 [testenv:manifest]
@@ -53,4 +53,4 @@ deps = coverage
 skip_install = true
 commands =
   coverage combine
-  coverage report {toxinidir}/skeleton/*.py
+  coverage report
