Updated documentation files: docs/source/index.rst README.rst

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands =
   {toxinidir}/scripts/install.py {posargs}
   {toxinidir}/scripts/test.py {posargs}
   coverage run --parallel -m pytest {posargs}
-  pycodestyle skeleton
+  pycodestyle
 
 [testenv:docs]
 basepython = python3.7
