--- a/setup.cfg
+++ b/setup.cfg
@@ -2,22 +2,18 @@
 release = sdist bdist_wheel
 docs = build_sphinx
 
-[build_sphinx]
-build-dir = docs/build
-source-dir = docs/source
-
 [bdist_rpm]
-doc_files =
-  docs
-  LICENSE.txt
-  README.rst
-  CHANGELOG.rst
+doc_files = docs,LICENSE.txt,README.rst,CHANGELOG.rst
 install-script = scripts/rpm_install.sh
 release = 1
 packager = Chad Loether <chad.loether@outlook.com>
 
 [bdist_wheel]
 universal = 1
+
+[build_sphinx]
+build-dir = docs/build
+source-dir = docs/source
 
 [check-manifest]
 ignore = .travis.yml
@@ -55,6 +51,7 @@ exclude = __pycache__,dist*,build*,*.egg-info,.idea*,.git,.tox*,*.pytest_cache*,
 count = 1
 format = pylint
 ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
+
 # Error Codes Ignored:
 #   E111 - indentation
 #   E402 - module level import not at top of file
@@ -63,5 +60,6 @@ ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
 #   F405 - unicode may be undefined, or defined from star
 #   F405 - imports: builtins
 #   W503 - line break before binary operator
+#
 # References:
 #   https://pycodestyle.readthedocs.io/
