--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
   coverage-clean
-  {py27,py37}
+  {python2.7,python3.8}
   docs
   manifest
   readme
@@ -18,39 +18,45 @@ setenv =
 # that our tests use.
 commands =
   {toxinidir}/scripts/install.py {posargs}
-  {toxinidir}/scripts/test.py {posargs}
+  {toxinidir}/scripts/runtests.py {posargs}
   coverage run --parallel -m pytest {posargs}
   pycodestyle
 
 [testenv:docs]
-basepython = python3.7
-extras = docs
+basepython = python3.8
+extras =
+  docs
 commands =
   pip install ".[docs]"
   python setup.py docs
 
 [testenv:manifest]
-deps = check-manifest
-commands = check-manifest
+deps =
+  check-manifest
+commands =
+  check-manifest
 
 [testenv:readme]
+skip_install = true
 deps =
   readme_renderer
   twine
-skip_install = true
 commands =
   python setup.py check -r -s
   twine check dist/*
 
 [testenv:coverage-clean]
-deps = coverage
 skip_install = true
-commands = coverage erase
+deps =
+  coverage
+commands =
+  coverage erase
 
 [testenv:coverage-report]
-basepython = python3.7
-deps = coverage
+basepython = python3.8
 skip_install = true
+deps =
+  coverage
 commands =
   coverage combine
   coverage report
