--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,8 @@ setenv =
   PYTHONPATH={toxinidir}
   ENVNAME={envname}
   LC_CTYPE = en_US.UTF-8
-# This is required in order to get UTF-8 output inside of the sub-processes
-# that our tests use.
+# This is required in order to get utf8 output inside
+# of the sub-processes that our tests use.
 commands =
   {toxinidir}/scripts/install.py {posargs}
   {toxinidir}/scripts/runtests.py {posargs}
