--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,12 @@
 [pytest]
-testpaths = tests
-log_file = tests/pytest.log
-log_file_level = DEBUG
-log_file_format = %(asctime)s [%(name)s] %(levelname)s: %(message)s
-log_file_date_format = %Y-%m-%d %H:%M:%S
-log_cli = 1
-log_cli_level = CRITICAL
-log_cli_format = %(message)s
+addopts = -rN --tb=short -p no:warnings --cache-clear
 cache_dir = tests/.pytest_cache
-render_collapsed = True
+log_cli = 1
+log_cli_format = %(message)s
+log_cli_level = CRITICAL
+log_file = tests/pytest.log
+log_file_date_format = %Y-%m-%d %H:%M:%S
+log_file_format = %(asctime)s [%(name)s] %(levelname)s: %(message)s
+log_file_level = DEBUG
+render_collapsed = 1
+testpaths = tests
