added script no_enc.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ release = sdist bdist_wheel
 docs = build_sphinx
 
 [bdist_rpm]
-doc_files = docs,LICENSE.txt,README.rst,CHANGELOG.rst
+doc_files = docs,LICENSE.txt,README.rst
 install-script = scripts/rpm_install.sh
 release = 1
 packager = Chad Loether <chad.loether@outlook.com>
