--- a/pytest.ini
+++ b/pytest.ini
@@ -3,10 +3,16 @@ addopts = -rN --tb=short -p no:warnings --cache-clear
 cache_dir = tests/.pytest_cache
 log_cli = 1
 log_cli_format = %(message)s
-log_cli_level = CRITICAL
-log_file = tests/pytest.log
+log_cli_level = DEBUG
+log_file = tests/logs/pytest.log
 log_file_date_format = %Y-%m-%d %H:%M:%S
 log_file_format = %(asctime)s [%(name)s] %(levelname)s: %(message)s
 log_file_level = DEBUG
+norecursedirs = .git .idea .tox scripts build examples docs
+python_files = tests/test_*.py
 render_collapsed = 1
 testpaths = tests
+
+; References:
+;   https://docs.pytest.org/en/stable/
+;   https://plugincompat.herokuapp.com/
