added pycodestyle options

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,10 +26,16 @@ directory = tests/coverage_html
 
 [coverage:run]
 branch = True
-omit = */tests/*
+omit =
+  */tests/*
+  .eggs/*
+  setup.py
+  env/*
+  build/*
+  dist/*
 
 [coverage:report]
-ignore_errors = True
+ignore_errors = 1
 omit =
   */tests/*
   .tox/*
@@ -43,14 +49,20 @@ license-file = LICENSE.txt
 description-file = README.rst
 
 [pycodestyle]
+# select =
+# hang-closing =
+# quiet =
+# show-pep8 =
+# show-source =
+# statistics =
 max-doc-length = 75
 max-line-length = 79
 filename = *.py
 exclude = __pycache__,dist*,build*,*.egg-info,.idea*,.git,.tox*,*.pytest_cache*,setup.py
 count = 1
 format = pylint
+verbose = 1
 ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
-
 # Error Codes Ignored:
 #   E111 - indentation
 #   E402 - module level import not at top of file
