--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
   coverage-clean
-  {python2.7,python3.8}
+  {python2.7,python3.8,python3.9}
   docs
   manifest
   readme
@@ -11,8 +11,8 @@ envlist =
 ignore_errors = true
 skip_missing_interpreters = true
 setenv =
-  PYTHONPATH={toxinidir}
-  ENVNAME={envname}
+  PYTHONPATH = {toxinidir}
+  ENVNAME = {envname}
   LC_CTYPE = en_US.UTF-8
 # This is required in order to get utf8 output inside
 # of the sub-processes that our tests use.
@@ -24,39 +24,31 @@ commands =
 
 [testenv:docs]
 basepython = python3.8
-extras =
-  docs
+extras = docs
 commands =
   pip install ".[docs]"
   python setup.py docs
 
 [testenv:manifest]
-deps =
-  check-manifest
-commands =
-  check-manifest
+deps = check-manifest
+commands = check-manifest
 
 [testenv:readme]
 skip_install = true
-deps =
-  readme_renderer
-  twine
+deps = readme_renderer, twine
 commands =
   python setup.py check -r -s
   twine check dist/*
 
 [testenv:coverage-clean]
 skip_install = true
-deps =
-  coverage
-commands =
-  coverage erase
+deps = coverage
+commands = coverage erase
 
 [testenv:coverage-report]
 basepython = python3.8
 skip_install = true
-deps =
-  coverage
+deps = coverage
 commands =
   coverage combine
   coverage report
