Added documentation references

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
+; References:
+;   https://docs.python.org/3/distutils/configfile.html
+;   https://setuptools.readthedocs.io/en/latest/setuptools.html
+;   https://setuptools.readthedocs.io/en/latest/setuptools.html
+;   https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
 [aliases]
 release = sdist bdist_wheel
 docs = build_sphinx
@@ -62,8 +67,7 @@ exclude = __pycache__,dist*,build*,*.egg-info,.idea*,.git,.tox*,*.pytest_cache*,
 count = 1
 format = pylint
 verbose = 1
-ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
-# Error Codes Ignored:
+# Ignored Error Codes:
 #   E111 - indentation
 #   E402 - module level import not at top of file
 #   F401 - builtins.* imported but unused
@@ -74,3 +78,4 @@ ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
 #
 # References:
 #   https://pycodestyle.readthedocs.io/
+ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
