--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ dist: xenial
 language: python
 python:
   - "2.7"
+  - "3.6"
+  - "3.7"
   - "3.8"
   - "3.9"
 install: pip install tox-travis
 script: tox
-after_success: pycodestyle *.py
+after_success: pycodestyle
