--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
   coverage-clean
-  {python2.7,python3.8,python3.9}
+  {python2.7,python3.6,python3.7,python3.8,python3.9}
   docs
   manifest
   readme
