--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,2 +1,10 @@
 # https://docs.github.com/en/github/building-a-strong-community/about-issue-and-pull-request-templates#issue-templates
+# https://docs.github.com/en/github/building-a-strong-community/configuring-issue-templates-for-your-repository#configuring-the-template-chooser
 blank_issues_enabled: false
+# contact_links:
+#   - name: GitHub Community Support
+#     url: https://github.community/
+#     about: Please ask and answer questions here.
+#   - name: GitHub Security Bug Bounty
+#     url: https://bounty.github.com/
+#     about: Please report security vulnerabilities here.
