--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 ; References:
-;   https://docs.python.org/3/distutils/configfile.html
-;   https://setuptools.readthedocs.io/en/latest/setuptools.html
-;   https://setuptools.readthedocs.io/en/latest/setuptools.html
-;   https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
+;  https://docs.python.org/3/distutils/configfile.html
+;  https://setuptools.readthedocs.io/en/latest/setuptools.html
+;  https://setuptools.readthedocs.io/en/latest/setuptools.html
+;  https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
 [aliases]
 release = sdist bdist_wheel
 docs = build_sphinx
@@ -50,9 +50,10 @@ exclude_lines =
   def __repr__
 
 [metadata]
-license-file = LICENSE.txt
+license-files = LICENSE.txt
 description-file = README.rst
 
+;suppress inspection for section "LongLine"
 [pycodestyle]
 # select =
 # hang-closing =
@@ -67,15 +68,5 @@ exclude = __pycache__,dist*,build*,*.egg-info,.idea*,.git,.tox*,*.pytest_cache*,
 count = 1
 format = pylint
 verbose = 1
-# Ignored Error Codes:
-#   E111 - indentation
-#   E402 - module level import not at top of file
-#   F401 - builtins.* imported but unused
-#   F403 - from builtins import * used; unable to detect undefined names
-#   F405 - unicode may be undefined, or defined from star
-#   F405 - imports: builtins
-#   W503 - line break before binary operator
-#
-# References:
-#   https://pycodestyle.readthedocs.io/
+# references: https://pycodestyle.readthedocs.io/
 ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
