changed output directories for coverage:html and coverage:run in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,24 +26,30 @@ ignore = .travis.yml
 [clean]
 all = 1
 
+; TODO: Remove setup.cfg coverage stanzas/entries or tests/.coveragerc file
+
 [coverage:html]
-directory = tests/coverage_html
+directory = tests/reports
 
 [coverage:run]
 branch = True
 omit =
-  */tests/*
   .eggs/*
   setup.py
   env/*
+  tests/*
+  */tests/*
   build/*
   dist/*
+  configs/*
+  venv/*
 
 [coverage:report]
-ignore_errors = 1
+ignore_errors = True
 omit =
   */tests/*
   .tox/*
+  tests/*
 exclude_lines =
   raise NotImplementedError.*
   pragma: NO COVER
@@ -64,7 +70,7 @@ description-file = README.rst
 max-doc-length = 75
 max-line-length = 79
 filename = *.py
-exclude = __pycache__,dist*,build*,*.egg-info,.idea*,.git,.tox*,*.pytest_cache*,setup.py
+exclude = __pycache__,docs/source/conf.py,venv*,old*,dist*,build*,*.egg-info,.idea*,.git,.tox*,*.pytest_cache*,setup.py
 count = 1
 format = pylint
 verbose = 1
