--- a/pytest.ini
+++ b/pytest.ini
@@ -1,17 +1,21 @@
 ; References:
 ;   https://docs.pytest.org/en/stable/
 ;   https://plugincompat.herokuapp.com/
+;suppress inspection for section "LongLine"
 [pytest]
-addopts = -rN --tb=short -p no:warnings --cache-clear
+addopts = -rN --tb=short -p no:warnings --cache-clear --cov . --html=tests/reports/pytest.html --cov-config 'tests/.coveragerc' --self-contained-html
 cache_dir = tests/.pytest_cache
 log_cli = 1
-log_cli_format = %(message)s
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
 log_cli_level = DEBUG
 log_file = tests/logs/pytest.log
 log_file_date_format = %Y-%m-%d %H:%M:%S
 log_file_format = %(asctime)s [%(name)s] %(levelname)s: %(message)s
 log_file_level = DEBUG
+log_level = DEBUG
 norecursedirs = .git .idea .tox scripts build examples docs
 python_files = tests/test_*.py
 render_collapsed = 1
+required_plugins = pytest-html pytest-cov
 testpaths = tests
