added "session" to __all__ in conftest.py and added changelog.sh

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,8 @@ description-file = README.rst
 
 ;suppress inspection for section "LongLine"
 [pycodestyle]
+# References:
+#   https://pycodestyle.readthedocs.io/
 # select =
 # hang-closing =
 # quiet =
@@ -74,5 +76,4 @@ exclude = __pycache__,docs/source/conf.py,venv*,old*,dist*,build*,*.egg-info,.id
 count = 1
 format = pylint
 verbose = 1
-# references: https://pycodestyle.readthedocs.io/
 ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
