--- a/pytest.ini
+++ b/pytest.ini
@@ -1,21 +1,72 @@
-; References:
+; pytest.ini
+;
+; references:
 ;   https://docs.pytest.org/en/stable/
 ;   https://plugincompat.herokuapp.com/
-;suppress inspection for section "LongLine"
+
 [pytest]
-addopts = -rN --tb=short -p no:warnings --cache-clear --cov . --html=tests/reports/pytest.html --cov-config 'tests/.coveragerc' --self-contained-html
-cache_dir = tests/.pytest_cache
-log_cli = 1
+
+# minimum compatible pytest version
+minversion = 7.0
+
+; required plugins and version constraints
+required_plugins =
+  pytest-cov>=6.1.1
+  pytest-html>=4.1.1
+  pytest-json-report>=1.5.0
+
+# cli arguments to pass to pytest
+# TODO: look into '--cov=.'
+addopts =
+  -rN
+  --tb=short
+  -p no:warnings
+  --cache-clear
+  --cov=.
+  --cov-config=tests/.coveragerc
+  --cov-report=html:tests/reports/coverage.html
+  --cov-report=xml:tests/reports/coverage.xml
+  --cov-report=json:tests/reports/coverage.json
+  --cov-report=lcov:tests/reports/coverage.lcov
+  --self-contained-html
+  --html=tests/reports/results.html
+  --junitxml=tests/reports/results.xml
+  --json-report
+  --json-report-file=tests/reports/results.json
+  --json-report-indent=2
+
+; discover test files in this directory
+testpaths = tests
+python_files = tests/test_*.py
+norecursedirs =
+  .git
+  .idea
+  .tox
+  scripts
+  build
+  examples
+  docs
+
+; logging configuration for CLI
+log_cli = true
 log_cli_date_format = %Y-%m-%d %H:%M:%S
 log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
 log_cli_level = DEBUG
+
+; logging configuration for file output
 log_file = tests/logs/pytest.log
 log_file_date_format = %Y-%m-%d %H:%M:%S
 log_file_format = %(asctime)s [%(name)s] %(levelname)s: %(message)s
 log_file_level = DEBUG
 log_level = DEBUG
-norecursedirs = .git .idea .tox scripts build examples docs
-python_files = tests/test_*.py
+
+; pytest cache location
+cache_dir = tests/.pytest_cache
+
+; additional pytest-html setting (optional)
 render_collapsed = 1
-required_plugins = pytest-html pytest-cov
-testpaths = tests
+
+; marker declarations (if custom marks are used)
+markers =
+  slow: marks tests as slow (use with '-m "not slow"')
+  integration: marks integration tests
