--- a/tests/.coveragerc
+++ b/tests/.coveragerc
@@ -1,10 +1,11 @@
-; References:
+; .coveragerc
+;
+; references:
 ;   https://coverage.readthedocs.io/
-[html]
-directory = tests/reports/coverage
 
 [run]
 branch = True
+data_file = tests/reports/.coverage
 omit =
   .eggs/*
   setup.py
@@ -17,6 +18,7 @@ omit =
   venv/*
 
 [report]
+show_missing = True
 ignore_errors = True
 omit =
   */tests/*
@@ -26,3 +28,20 @@ exclude_lines =
   raise NotImplementedError.*
   pragma: NO COVER
   def __repr__
+
+[html]
+title = Coverage Report
+directory = tests/reports/coverage
+
+[json]
+output = tests/reports/coverage.json
+pretty_print = True
+show_contexts = True
+
+[lcov]
+output = tests/reports/coverage.lcov
+line_checksums = True
+
+[xml]
+output = tests/reports/coverage.xml
+
