--- a/setup.cfg
+++ b/setup.cfg
@@ -8,10 +8,13 @@ release = sdist bdist_wheel
 docs = build_sphinx
 
 [bdist_rpm]
-doc_files = docs,LICENSE.txt,README.rst
+doc_files =
+  docs
+  LICENSE.txt
+  README.rst
 install-script = scripts/rpm_install.sh
 release = 1
-packager = Chad Loether <chad.loether@outlook.com>
+packager = Packager <packager@github.com>
 
 [bdist_wheel]
 universal = 1
@@ -61,8 +64,7 @@ description-file = README.rst
 
 ;suppress inspection for section "LongLine"
 [pycodestyle]
-# References:
-#   https://pycodestyle.readthedocs.io/
+# references: https://pycodestyle.readthedocs.io/
 # select =
 # hang-closing =
 # quiet =
@@ -72,8 +74,32 @@ description-file = README.rst
 max-doc-length = 75
 max-line-length = 79
 filename = *.py
-exclude = __pycache__,docs/source/conf.py,venv*,old*,dist*,build*,*.egg-info,.idea*,.git,.tox*,*.pytest_cache*,setup.py
+exclude =
+  __pycache__
+  docs/source/conf.py
+  venv*,old*
+  dist*
+  build*
+  *.egg-info
+  .idea*
+  .git
+  .tox*
+  *.pytest_cache*
+  setup.py
 count = 1
 format = pylint
 verbose = 1
-ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
+ignore =
+  E111
+  E114
+  E121
+  E129
+  E402
+  E501
+  E741
+  E722
+  F401
+  F403
+  F405
+  W503
+  W504
