--- a/.gitignore
+++ b/.gitignore
@@ -135,7 +135,8 @@ dmypy.json
 # MacOS
 .DS_Store
 
-# Testing Directories
+# Testing Files and Directories
+tests/*.log
 tests/.pytest_cache/
 tests/reports/
-tests/*.log
+tests/logs/
