--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ doc_files =
   docs
   LICENSE.txt
   README.rst
-install-script = scripts/rpm_install.sh
+install_script = scripts/rpm_install.sh
 release = 1
 packager = Packager <packager@github.com>
 
@@ -20,8 +20,8 @@ packager = Packager <packager@github.com>
 universal = 1
 
 [build_sphinx]
-build-dir = docs/build
-source-dir = docs/source
+build_dir = docs/build
+source_dir = docs/source
 
 [check-manifest]
 ignore = .travis.yml
@@ -59,8 +59,8 @@ exclude_lines =
   def __repr__
 
 [metadata]
-license-files = LICENSE.txt
-description-file = README.rst
+license_files = LICENSE.txt
+description_file = README.rst
 
 ;suppress inspection for section "LongLine"
 [pycodestyle]
