--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "skeleton"
-version = "0.0.10"
+version = "0.0.11"
 description = "Python Module Template"
 readme = "README.md"
 license = { text = "MIT" }
@@ -89,8 +89,7 @@ tests = [
     "twine",
     "wheel"
 ]
-python2.6 = ["ordereddict==1.1", "simplejson==3.3.0"]
-python2.7 = ["ipaddress"]
+python2 = ["ordereddict==1.1", "simplejson==3.3.0", "ipaddress"]
 
 [project.scripts]
 skeleton = "skeleton.__main__:main"
