--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
   coverage-clean
-  {python2.7,python3.6,python3.7,python3.8,python3.9}
+  {python2.7,python3.6,python3.7,python3.8,python3.9,python3.10,python3.11}-tests
   docs
   manifest
   readme
@@ -47,7 +47,7 @@ deps = coverage
 commands = coverage erase
 
 [testenv:coverage-report]
-basepython = python3.9
+basepython = python3.11
 skip_install = true
 deps = coverage
 commands =
