--- a/Pipfile
+++ b/Pipfile
@@ -1,16 +1,75 @@
+#
+# Pipfile for managing project dependencies
+#
+# References:
+# - https://pipenv.pypa.io/en/latest/pipfile.html
+#
 [[source]]
+# https://pipenv.pypa.io/en/latest/pipfile.html#packages-section
 url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[scripts]
+# https://pipenv.pypa.io/en/latest/pipfile.html#packages-section
+
 [packages]
+# https://pipenv.pypa.io/en/latest/pipfile.html#packages-section
 six = "*"
 appdirs = "*"
 
 [dev-packages]
+# https://pipenv.pypa.io/en/latest/pipfile.html#packages-section
 mypy = "*"
 flake8 = "*"
 pytest = "*"
+black = "*"
+isort = "*"
+check-manifest = "*"
+coverage = "*"
+pycodestyle = "*"
+pytest = "*"
+pytest-cov = "*"
+pytest-html = "*"
+pytest-json-report = "*"
+tox = "*"
+tox-travis = "*"
+twine = "*"
+wheel = "*"
+sphinx = "*"
+sphinxcontrib-napoleon = "*"
+guzzle_sphinx_theme = "*"
+
+[docs]
+# https://pipenv.pypa.io/en/latest/pipfile.html#packages-section
+sphinx = "*"
+sphinxcontrib-napoleon = "*"
+guzzle_sphinx_theme = "*"
+
+[tests]
+# https://pipenv.pypa.io/en/latest/pipfile.html#packages-section
+check-manifest = "*"
+coverage = "*"
+pycodestyle = "*"
+pytest = "*"
+pytest-cov = "*"
+pytest-html = "*"
+pytest-json-report = "*"
+tox = "*"
+tox-travis = "*"
+twine = "*"
+wheel = "*"
+
+[pipenv]
+# https://pipenv.pypa.io/en/latest/pipfile.html#packages-section
+allow_prereleases = true           # Allow pre-release versions
+disable_pip_input = true           # Prevent pipenv from asking for input
+install_search_all_sources = true  # Search all sources when installing from lock
+sort_pipfile = true                # Sort packages alphabeticallyy
 
 [requires]
-python_version = "3.11"
+python_version = "3.11.14"
+
+# how to update Pipfile.lock:
+# 1. pipenv lock --clear
+# 2. pipenv install --dev
